[DI-16] Implement Recommended Products section on the landing page (#16)